Linked the script and added the link

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
   
   
         <!-- for the script -->
+    <p>If you want to know what your favourite primary color mean</p>
+    <button onclick="favColorButton()">click here!</button>
+    <script src="favColor.js"></script>
 
 </body>
 </html>
