added styles.css along with its content

--- a/index.html
+++ b/index.html
@@ -4,35 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Colors</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
   <header>
     <h1>Primary Colors</h1>
-    <ul>
-      <li><a href="https://en.wikipedia.org/wiki/Primary_color">Additional resource</a></li>
-      <li><a href="https://hasnaa38.github.io/reading-notes/">About us</a></li>
-      <li><a href="https://www.google.jo/">Contct us</a></li>
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Primary_color">Additional resource</a></li>
+        <li><a href="https://hasnaa38.github.io/reading-notes/">About us</a></li>
+        <li><a href="https://www.google.jo/">Contct us</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
     <div>
       <!-- what are colors -->
-      <h3>What is color?</h3>
+      <h3>Colors</h3>
       <p>
         Color is the aspect of things that is caused by differing qualities of light being reflected or emitted by them.
         To see color, you have to have light. When light shines on an object some colors bounce off the object and others are absorbed by it. Our eyes only see the colors that are bounced off or reflected.
       </p>
 
       <!-- primary colors -->
-      <h3>What are primary colors</h3>
+      <h3>Primary Colors</h3>
       <p>
-        Primary colours are basic colors that can be mixed together to produce other colors. They are usually considered to be blue, red, yellow.
+        Primary colours are the basic colors that can be mixed together to produce other colors. Usually, primary colors are considered to be blue, red, and yellow.
       </p>
     </div>
 
+
+    <span>
+
     <!-- for blue -->
-    <div> 
+    <div id="BlueDiv"> 
       <h4>Blue</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Location_dot_blue.svg/1024px-Location_dot_blue.svg.png" alt="the color blue">
       
@@ -42,7 +50,7 @@
     </div>
 
     <!-- for red -->
-    <div>
+    <div id="RedDiv">
       <h4>Red</h4>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Disc_Plain_red.svg/1200px-Disc_Plain_red.svg.png" alt="the color red">
 
@@ -52,7 +60,7 @@
     </div>
 
     <!-- for yellow -->
-    <div>
+    <div id="YellowDiv">
       <h4>Yellow</h4>
       <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fb/Yellow_icon.svg/1200px-Yellow_icon.svg.png" alt="the color yellow">
 
@@ -61,10 +69,12 @@
       </p>
     </div>
 
+    </span> 
+
     <!-- for the script -->
-    <p>If you want to know what your favourite primary color mean</p>
+    <!-- <p>If you want to know what your favourite primary color mean</p>
     <button onclick="favColorButton()">click here!</button>
-    <script src="favColor.js"></script>
+    <script src="favColor.js"></script> -->
     
   </main>
   
