--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
       </p>
     </div>
 
-
-    <span>
-
     <!-- for blue -->
     <div id="BlueDiv"> 
       <h4>Blue</h4>
@@ -69,12 +66,13 @@
       </p>
     </div>
 
-    </span> 
-
+    <div id="button">
     <!-- for the script -->
-    <!-- <p>If you want to know what your favourite primary color mean</p>
+    <p id="findMore">To find out more about each primary color, click on the button below :)</p>
     <button onclick="favColorButton()">click here!</button>
-    <script src="favColor.js"></script> -->
+    </div>
+
+    <script src="favColor.js"></script>
     
   </main>
   
