changed the code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <ul>
         <li><a href="https://en.wikipedia.org/wiki/Primary_color">Additional resource</a></li>
         <li><a href="https://hasnaa38.github.io/reading-notes/">About us</a></li>
-        <li><a href="https://www.google.jo/">Contct us</a></li>
+        <li><a href="www.google.com/">Contct us</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -65,14 +66,22 @@
         Yellow is the color of sunshine, hope, and happiness, has conflicting associations. On one hand yellow stands for freshness, happiness, positivity, clarity, energy, optimism, enlightenment, remembrance, intellect, honor, loyalty, and joy, but on the other, it represents cowardice and deceit. A dull or dingy yellow may represent caution, sickness, and jealousy.
       </p>
     </div>
+ 
+
+ 
 
     <div id="button">
-    <!-- for the script -->
-    <p id="findMore">To find out more about each primary color, click on the button below :)</p>
-    <button onclick="favColorButton()">click here!</button>
+      <p class="buttonInfoStyle">To find out more about each primary color, click on the button below:</p>
+      <button onclick="knowMoreAboutPC(favColor)">click here!</button>
+
+      <p class="buttonInfoStyle">To see what Harry Potter house crest each primary color represents, click on the button below:</p>
+      <button onclick='harryPotterCrest(favColor)'>click here</button></p>
+
     </div>
 
-    <script src="favColor.js"></script>
+    <!-- Calling js:  -->
+    <!-- <script src="favColor.js"></script> -->
+    <script src="newScript.js"></script>
     
   </main>
   
